css/app.css
/* Styles that we put on top of Bootstrap */
/* --------------------------------------------------
   Table of Contents
-----------------------------------------------------
:: Shared Styles
:: Page Name 1
:: Page Name 2
*/
/* -----------------------------------------
   Shared Styles
----------------------------------------- */

/* Sticky footer styles
   -------------------------------------------------- */

html,
body {
    height: 100%;
    /* The html and body elements cannot have any padding or margin. */
}

/* Wrapper for page content to push down footer */
#wrap {
    min-height: 100%;
    height: auto !important;
    height: 100%;
    /* Negative indent footer by it's height */
    margin: 0 auto -60px;
}

/* Set the fixed height of the footer here */
#push,
#footer {
    height: 60px;
}
#footer {
    background-color: #f5f5f5;
}

/* Lastly, apply responsive CSS fixes as necessary */
@media (max-width: 767px) {
    #footer {
        margin-left: -20px;
        margin-right: -20px;
        padding-left: 20px;
        padding-right: 20px;
    }
}

/* Remove top padding when top navbar goes static in narrow viewports */
/*@media (max-width: 979px) {
    body {
        padding-top: 0;
    }
}*/

/* add background-color tracking for navbar items */
.navbar .nav > li > a:focus, .navbar .nav > li > a:hover {
    background-color: #F1F1F1;
    color: #333333;
    text-shadow: 1px 1px 0 #FFFFFF;
}


/* -----------------------------------------
   about.html
----------------------------------------- */
#ProfilePic {
    float: left;
    margin-right: 2em;
    margin-bottom: 1.3em;
}

/* -----------------------------------------
   gellery.html
----------------------------------------- */
#VideosHeader {
    text-align: center;
    padding: 0.2em;
    border-bottom: 1px solid #aaaaaa;
}

